[package]
name = "pay-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP API layer for lightning-cart-rs"

[[bin]]
name = "lightning-cart"
path = "src/main.rs"

[dependencies]
# Internal crates
pay-core = { workspace = true }
pay-stripe = { workspace = true }

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# HTTP client (for webhook forwarding)
reqwest.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Environment & config
dotenvy.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Time
chrono.workspace = true

# UUID
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
axum-test = "16"
