[package]
name = "pay-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and traits for lightning-cart-rs payment engine"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
toml.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
