[package]
name = "pay-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "WASM bindings for lightning-cart-rs (edge deployment)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Internal
pay-core = { workspace = true }

# WASM
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Web APIs
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
